# axum-visa-tracker-sse

./: .gitignore  Cargo.toml
.github/workflows/: pr-pipeline.yaml  trunk-pipeline.yaml
assets/: fallback.html  index.html
src/: event.rs  main.rs  send_event.rs
