[package]
name = "axum-visa-tracker-sse"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-stream = "0.3.6"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
